fix(ZNTA-2589) ensure antd dropdowns have a white/transparent background for visibility

--- a/server/zanata-frontend/src/app/styles/style.less
+++ b/server/zanata-frontend/src/app/styles/style.less
@@ -537,6 +537,9 @@
   .editable.row {
     padding: @spacing-rh;
   }
+  .select {
+    background-color: transparent;
+  }
   .Select-option {
     line-height: 1rem;
     padding: @spacing-re;
